src/objects/Rep_Assignment__c.object
<CustomObject>
    <description>This is a relationship between a user and a rep, indicating that user should see that rep&apos;s records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is set to &quot;inactive&quot; when a user disables &quot;Universal Access&quot; mode and removes their UPI-granted rep access.</description>
        <inlineHelpText>This is set to &quot;inactive&quot; when a user disables &quot;Universal Access&quot; mode and removes their UPI-granted rep access.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Assignment_Key__c</fullName>
        <formula>User__r.Davenport_Username__c + Rep__r.Rep_Number__c + TEXT(Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Assignment Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Rep Assignments</relationshipLabel>
        <relationshipName>Rep_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep</fullName>
                    <default>true</default>
                    <label>Rep</label>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Rep__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Rep_Assignment_Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Rep Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>